tests/procedure_call/empty.ast.err
Error: Unexpected token in input while parsing expression, expected <expression>, if, lambda, set!
   ╭─[tests/procedure_call/empty.scm:1:2]
   │
 1 │ ()
   ·  ┬  
   ·  ╰── Unexpected token )
───╯
